tests/syntax_error/2bad.jou
def x() -> None:
    2bad = "oh no"  # Error: invalid number or variable name "2bad"
    return
